# fastchain

./: .env.example  .gitignore  .readthedocs.yaml  COMMIT_MESSAGES.md  LICENSE  README.md  contribution.md  pyproject.toml  setup.py
.github/: FUNDING.yml  pull_request_template.md
fastchain/: __init__.py  constants.py  fastchain.py  library_testing.ipynb  schema.py  utils.py
fastchain/chunker/: base.py  code_chunker.py  schema.py  text_chunker.py  utils.py
fastchain/conf/: config.yaml  logging.conf
fastchain/connectors/: base.py
fastchain/datacleaners/: __init__.py
fastchain/dataloaders/: base.py  base_loader.py  code.py  docx.py  pdf_loader.py  references.md  slack.py  utils.py  youtube.py
fastchain/dataloaders/chunkers/: code_chunker.py  constants.py  schema.py  sentence_chunker.py  token_chunker.py
fastchain/dataloaders/text_chunker/: code_chunker.py  token_chunker.py
fastchain/document/: README.md  __init__.py  base.py
fastchain/document/chunk/: base.py  schema.py
fastchain/documents/: base.py
fastchain/documents/sections/: base.py  schema.py  section.py
fastchain/embedding/: base.py  cohere.py  openai.py  sentance_transformer.py
fastchain/embeddings/: base.py  openai.py
fastchain/indexers/: base.py  base_indexer.py
fastchain/llms/: base.py  base_llm.py  openai_utils.py
fastchain/prompts/: base_prompt.py
fastchain/query_engine/: open_source.py
fastchain/tests/test_chunker/: test_code_chunker.py  (+1 more)
fastchain/vector_db/: pinecone.py
fastchain/vector_stores/: README.md  base.py  chroma.py  elastic_search.py  pinecone.py  weaviate.py
