[tool.poetry]
name = "fastchain"
version = "0.1.0"
description = "Fastchain is a wrapper library around langchain for building LLM powered apps quickly and integrating it with you existing apps"
authors = ["Pranav Pandey <pranavpandey2511@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastchain"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
langchain = "^0.0.221"
qdrant-client = "^1.3.1"
vectordb = "^0.0.16"
weaviate-client = "^3.22.1"
chromadb = "^0.4.2"
playwright = "^1.36.0"
pymupdf = "^1.22.5"
youtube-transcript-api = "^0.6.1"
beautifulsoup4 = "^4.12.2"
pypdf = "^3.12.2"
pytube = "^15.0.0"
lxml = "^4.9.3"
openai = "^0.27.8"
sentence-transformers = "^2.2.2"
transformers = "^4.31.0"
gpt4all = "^1.0.6"
pydantic = "1.10.11"
requests = "^2.31.0"
duckduckgo-search = "^3.8.4"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
